@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-20T08:19:13Z",
+  "timestamp" : "2022-04-21T08:18:02Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 15,
-  "uniques" : 9,
+  "count" : 16,
+  "uniques" : 10,
   "clones" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-04-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
